--- a/plugins/vdm2isa/pub/isq-lib/main.tex
+++ b/plugins/vdm2isa/pub/isq-lib/main.tex
@@ -170,10 +170,6 @@ pdfstartview=Fit
 
 \usepackage{vdmlisting}
 
-\newcommand{\jkr}[1]{{\scriptsize\textcolor{orange}{JKR:~#1}}}  %
-\newcommand{\fpm}[1]{{\scriptsize\textcolor{purple}{FPM:~#1}}}  %
-\newcommand{\hdm}[1]{{\scriptsize\textcolor{blue}{HDM:~#1}}}  %
-\newcommand{\nb}[1]{{\scriptsize\textcolor{magenta}{NB:~#1}}}  %
 
 %%%%%%%%%%%%%%%%%%%%%%% Begin document %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
@@ -193,20 +189,13 @@ pdfstartview=Fit
 %\titlerunning{Short Title}
 
 %Multiple institutes are typeset as follows:
-\author{Leo Freitas\inst{1}
+\author{Leo Freitas
 }
 %If there are too many authors, use \authorrunning
 % \authorrunning{First Author et al.}
 \authorrunning{ }
 
-\institute{
-%DIGIT, Aarhus University, Department of Engineering, \\
-%Finlandsgade 22, 8200 Aarhus N, Denmark\\
-%\email{\{jkr, fpm, hdm, pgl\}@ece.au.dk}
-%\and
-%Independent, \email{nick.battle@acm.org}
-%\and
-School of Computing, Newcastle University, \\
+\institute{School of Computing, Newcastle University, \\
 \email{leo.freitas@newcastle.ac.uk}
 }
 			
