Updated Ack on csv-lib pub to remove myself

--- a/plugins/vdm2isa/pub/csv-lib/main.tex
+++ b/plugins/vdm2isa/pub/csv-lib/main.tex
@@ -492,7 +492,7 @@ A key motivation for this work was the need for a more robust data import functi
 In future, we want to integrate the debugging environment of VDM native library calls, such that we use VDM VSCode DAP protocol~\cite{AdvancedVSCodePaper}. Moreover, on the CSV format itself, nested CSV formats, further CSV types, multiple CSV headers per file, \textit{etc}. This way, the VDM library developer can handle VSCode debugging of both VDM library specification and examples, alongside VSCode Java debugging. 
 
 \subsubsection*{Acknowledgements}
-We acknowledge NCSC funding on development of safer payment protocols. We very much appreciate fruitiful discussion with Aaron Buhagiar about CSV parsing, and Nick Battle about VDMJ native calls setup. 
+We acknowledge NCSC funding on development of safer payment protocols. We very much appreciate fruitful discussion with Nick Battle about VDMJ native calls setup. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \bibliographystyle{splncs03}
