recursion paper fixes

--- a/plugins/vdm2isa/pub/recursion/document/root.tex
+++ b/plugins/vdm2isa/pub/recursion/document/root.tex
@@ -58,7 +58,7 @@ DIGIT, Aarhus University, Department of Engineering, \\
 \maketitle
 \setcounter{footnote}{0} 
 \begin{abstract}
-For recursive functions the general principles of induction needs to be applied. Instead of verifying directly in using the Vienna Development Method Specification Language (VDM-SL), we suggest a translation to Isabelle/HOL. In this paper, the challenges of such a translation for recursive functions are presented. This is an extension of an existing translation and a VDM mathematical toolbox in Isabelle/HOL enabling support for recursive functions.
+For recursive functions general principles of induction needs to be applied. Instead of verifying them directly using the Vienna Development Method Specification Language (VDM-SL), we suggest a translation to Isabelle/HOL. In this paper, the challenges of such a translation for recursive functions are presented. This is an extension of an existing translation and a VDM mathematical toolbox in Isabelle/HOL enabling support for recursive functions.
 \end{abstract}
 
 \keywords{VDM, Isabelle/HOL, Translation, Recursion, VSCode}
